--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -177,9 +177,25 @@
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
 \chapter{ZLP Library is the best! Maybe...}
-\label{md__c___users_yariy__documents__git_hub__z_l_p__library__r_e_a_d_m_e}
-\Hypertarget{md__c___users_yariy__documents__git_hub__z_l_p__library__r_e_a_d_m_e}
-\input{md__c___users_yariy__documents__git_hub__z_l_p__library__r_e_a_d_m_e}
+\label{md__r_e_a_d_m_e}
+\Hypertarget{md__r_e_a_d_m_e}
+\input{md__r_e_a_d_m_e}
+\chapter{Hierarchical Index}
+\input{hierarchy}
+\chapter{Class Index}
+\input{annotated}
+\chapter{File Index}
+\input{files}
+\chapter{Class Documentation}
+\input{class_client}
+\input{class_client_destroyer}
+\input{class_d_b___server}
+\input{class_my_tcp_server}
+\chapter{File Documentation}
+\input{client_8h_source}
+\input{db__server_8h_source}
+\input{mytcpserver_8h_source}
+\input{parser_8h_source}
 %--- End generated contents ---
 % Index
   \backmatter
