--- a/doc/latex/class_my_tcp_server.tex
+++ b/doc/latex/class_my_tcp_server.tex
@@ -11,46 +11,53 @@ Inheritance diagram for My\+Tcp\+Server\+:\begin{figure}[H]
 \item 
 \mbox{\Hypertarget{class_my_tcp_server_ae174239241daedf24a61dfb35b107a0c}\label{class_my_tcp_server_ae174239241daedf24a61dfb35b107a0c}} 
 void {\bfseries close} ()
-\item 
-\mbox{\Hypertarget{class_my_tcp_server_a0ba7316ffe1a26c57fabde9e74b6c8dc}\label{class_my_tcp_server_a0ba7316ffe1a26c57fabde9e74b6c8dc}} 
-void {\bfseries slot\+New\+Connection} ()
-\item 
-\mbox{\Hypertarget{class_my_tcp_server_a3e040c49dbefd65b9a58ab662fc9f7a2}\label{class_my_tcp_server_a3e040c49dbefd65b9a58ab662fc9f7a2}} 
-void {\bfseries slot\+Client\+Disconnected} ()
-\item 
-\mbox{\Hypertarget{class_my_tcp_server_ab4a64d2eab985d723090963f5c8a2882}\label{class_my_tcp_server_ab4a64d2eab985d723090963f5c8a2882}} 
-void {\bfseries slot\+Server\+Read} ()
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Method, that deactivating Server. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{class_my_tcp_server_a0ba7316ffe1a26c57fabde9e74b6c8dc}{slot\+New\+Connection}} ()
+\begin{DoxyCompactList}\small\item\em Method, that creating new slot connection. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{class_my_tcp_server_a3e040c49dbefd65b9a58ab662fc9f7a2}{slot\+Client\+Disconnected}} ()
+\begin{DoxyCompactList}\small\item\em Method, that closing included socket. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{class_my_tcp_server_ab4a64d2eab985d723090963f5c8a2882}{slot\+Server\+Read}} ()
+\begin{DoxyCompactList}\small\item\em Method, that reading byte array from server slot. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{class_my_tcp_server_acf367c4695b4d160c7a2d25c2afaaec4}\label{class_my_tcp_server_acf367c4695b4d160c7a2d25c2afaaec4}} 
 {\bfseries My\+Tcp\+Server} (QObject $\ast$parent=nullptr)
-\item 
-\mbox{\hyperlink{class_my_tcp_server_ab39e651ff7c37c152215c02c225e79ef}{$\sim$\+My\+Tcp\+Server}} ()
-\begin{DoxyCompactList}\small\item\em Class that do something. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
 
-\doxysubsection{Constructor \& Destructor Documentation}
-\mbox{\Hypertarget{class_my_tcp_server_ab39e651ff7c37c152215c02c225e79ef}\label{class_my_tcp_server_ab39e651ff7c37c152215c02c225e79ef}} 
-\index{MyTcpServer@{MyTcpServer}!````~MyTcpServer@{$\sim$MyTcpServer}}
-\index{````~MyTcpServer@{$\sim$MyTcpServer}!MyTcpServer@{MyTcpServer}}
-\doxysubsubsection{\texorpdfstring{$\sim$MyTcpServer()}{~MyTcpServer()}}
-{\footnotesize\ttfamily My\+Tcp\+Server\+::$\sim$\+My\+Tcp\+Server (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_my_tcp_server_a3e040c49dbefd65b9a58ab662fc9f7a2}\label{class_my_tcp_server_a3e040c49dbefd65b9a58ab662fc9f7a2}} 
+\index{MyTcpServer@{MyTcpServer}!slotClientDisconnected@{slotClientDisconnected}}
+\index{slotClientDisconnected@{slotClientDisconnected}!MyTcpServer@{MyTcpServer}}
+\doxysubsubsection{\texorpdfstring{slotClientDisconnected}{slotClientDisconnected}}
+{\footnotesize\ttfamily void My\+Tcp\+Server\+::slot\+Client\+Disconnected (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [slot]}}
 
 
 
-Class that do something. 
+Method, that closing included socket. 
+
+Closing client\textquotesingle{}s Socket, removing user\textquotesingle{}s socket id \mbox{\Hypertarget{class_my_tcp_server_a0ba7316ffe1a26c57fabde9e74b6c8dc}\label{class_my_tcp_server_a0ba7316ffe1a26c57fabde9e74b6c8dc}} 
+\index{MyTcpServer@{MyTcpServer}!slotNewConnection@{slotNewConnection}}
+\index{slotNewConnection@{slotNewConnection}!MyTcpServer@{MyTcpServer}}
+\doxysubsubsection{\texorpdfstring{slotNewConnection}{slotNewConnection}}
+{\footnotesize\ttfamily void My\+Tcp\+Server\+::slot\+New\+Connection (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [slot]}}
 
 
-\begin{DoxyParams}{Parameters}
-{\em \mbox{\hyperlink{class_my_tcp_server}{My\+Tcp\+Server}}} & Parametr, that just justing the just \\
-\hline
-\end{DoxyParams}
-\begin{DoxyReturn}{Returns}
-nothing 
-\end{DoxyReturn}
 
+Method, that creating new slot connection. 
+
+If server is started, method create a slot connection \mbox{\Hypertarget{class_my_tcp_server_ab4a64d2eab985d723090963f5c8a2882}\label{class_my_tcp_server_ab4a64d2eab985d723090963f5c8a2882}} 
+\index{MyTcpServer@{MyTcpServer}!slotServerRead@{slotServerRead}}
+\index{slotServerRead@{slotServerRead}!MyTcpServer@{MyTcpServer}}
+\doxysubsubsection{\texorpdfstring{slotServerRead}{slotServerRead}}
+{\footnotesize\ttfamily void My\+Tcp\+Server\+::slot\+Server\+Read (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [slot]}}
+
+
+
+Method, that reading byte array from server slot. 
+
+Reading information (byte array) from client\+Socket and writing it in execute\+\_\+line 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
