--- a/doc/latex/mytcpserver_8h_source.tex
+++ b/doc/latex/mytcpserver_8h_source.tex
@@ -12,13 +12,13 @@
 \DoxyCodeLine{00008\ \ \ \ \ Q\_OBJECT}
 \DoxyCodeLine{00009\ \textcolor{keyword}{public}:}
 \DoxyCodeLine{00010\ \ \ \ \ \textcolor{keyword}{explicit}\ \mbox{\hyperlink{class_my_tcp_server}{MyTcpServer}}(QObject\ *parent\ =\ \textcolor{keyword}{nullptr});}
-\DoxyCodeLine{00011\ \ \ \ \ \mbox{\hyperlink{class_my_tcp_server_ab39e651ff7c37c152215c02c225e79ef}{\string~MyTcpServer}}();}
+\DoxyCodeLine{00011\ \ \ \ \ \mbox{\hyperlink{class_my_tcp_server}{\string~MyTcpServer}}();}
 \DoxyCodeLine{00012\ \textcolor{keyword}{public}\ slots:}
-\DoxyCodeLine{00013\ \ \ \ \ \textcolor{keywordtype}{void}\ close();}
-\DoxyCodeLine{00014\ \ \ \ \ \textcolor{keywordtype}{void}\ slotNewConnection();}
-\DoxyCodeLine{00015\ \ \ \ \ \textcolor{keywordtype}{void}\ slotClientDisconnected();}
+\DoxyCodeLine{00013\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_my_tcp_server_ae174239241daedf24a61dfb35b107a0c}{close}}();}
+\DoxyCodeLine{00014\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_my_tcp_server_a0ba7316ffe1a26c57fabde9e74b6c8dc}{slotNewConnection}}();}
+\DoxyCodeLine{00015\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_my_tcp_server_a3e040c49dbefd65b9a58ab662fc9f7a2}{slotClientDisconnected}}();}
 \DoxyCodeLine{00016\ }
-\DoxyCodeLine{00017\ \ \ \ \ \textcolor{keywordtype}{void}\ slotServerRead();}
+\DoxyCodeLine{00017\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_my_tcp_server_ab4a64d2eab985d723090963f5c8a2882}{slotServerRead}}();}
 \DoxyCodeLine{00018\ \textcolor{keyword}{private}:}
 \DoxyCodeLine{00019\ \ \ \ \ QTcpServer\ *\ mTcpServer;}
 \DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{int}\ server\_status;}
