--- a/doc/server doc/latex/db__server_8h_source.tex
+++ b/doc/server doc/latex/db__server_8h_source.tex
@@ -22,7 +22,7 @@
 \DoxyCodeLine{00018\ \ \ \ \ \textcolor{keywordtype}{int}\ db\_port\ =\ 5432;}
 \DoxyCodeLine{00019\ }
 \DoxyCodeLine{00020\ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00021\ \ \ \ \ \textcolor{keyword}{static}\ \mbox{\hyperlink{class_d_b___server}{DB\_Server}}\ *get();}
+\DoxyCodeLine{00021\ \ \ \ \ \textcolor{keyword}{static}\ \mbox{\hyperlink{class_d_b___server}{DB\_Server}}\ *\mbox{\hyperlink{class_d_b___server_ae503392addf041f1b1769c88cb33bdf3}{get}}();}
 \DoxyCodeLine{00022\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{class_d_b___server_a1736a4db23f2e1d626f489d9b211b4f7}{init}}(}
 \DoxyCodeLine{00023\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ host\ =\ \textcolor{stringliteral}{"{}"{}},}
 \DoxyCodeLine{00024\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ port\ =\ 0,}
@@ -30,10 +30,10 @@
 \DoxyCodeLine{00026\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ user\ =\ \textcolor{stringliteral}{"{}"{}},}
 \DoxyCodeLine{00027\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ pass\ =\ \textcolor{stringliteral}{"{}"{}});}
 \DoxyCodeLine{00028\ }
-\DoxyCodeLine{00029\ \ \ \ \ QSqlQuery\ query\_simple(\textcolor{keyword}{const}\ QString\ q);}
-\DoxyCodeLine{00030\ \ \ \ \ QSqlQuery\ query\_prepare(\textcolor{keyword}{const}\ QString\ q);}
+\DoxyCodeLine{00029\ \ \ \ \ QSqlQuery\ \mbox{\hyperlink{class_d_b___server_ad4f05e37f946966adb7e00a2af79b845}{query\_simple}}(\textcolor{keyword}{const}\ QString\ q);}
+\DoxyCodeLine{00030\ \ \ \ \ QSqlQuery\ \mbox{\hyperlink{class_d_b___server_acc10401becbd9bc94b5e2790ec171590}{query\_prepare}}(\textcolor{keyword}{const}\ QString\ q);}
 \DoxyCodeLine{00031\ \textcolor{keyword}{public}\ slots:}
-\DoxyCodeLine{00032\ \ \ \ \ \textcolor{keywordtype}{void}\ close();}
+\DoxyCodeLine{00032\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_d_b___server_a26a9265bb1bfbb83af2c4754b2134db4}{close}}();}
 \DoxyCodeLine{00033\ \};}
 \DoxyCodeLine{00034\ }
 \DoxyCodeLine{00035\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ DB\_SERVER\_H}}
