--- a/doc/server doc/latex/class_d_b___server.tex
+++ b/doc/server doc/latex/class_d_b___server.tex
@@ -23,7 +23,8 @@ QSql\+Query \mbox{\hyperlink{class_d_b___server_acc10401becbd9bc94b5e2790ec17159
 \doxysubsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-static \mbox{\hyperlink{class_d_b___server}{DB\+\_\+\+Server}} $\ast$ \mbox{\hyperlink{class_d_b___server_ae503392addf041f1b1769c88cb33bdf3}{get}} ()
+\mbox{\Hypertarget{class_d_b___server_ae503392addf041f1b1769c88cb33bdf3}\label{class_d_b___server_ae503392addf041f1b1769c88cb33bdf3}} 
+static \mbox{\hyperlink{class_d_b___server}{DB\+\_\+\+Server}} $\ast$ {\bfseries get} ()
 \end{DoxyCompactItemize}
 
 
@@ -34,33 +35,27 @@ static \mbox{\hyperlink{class_d_b___server}{DB\+\_\+\+Server}} $\ast$ \mbox{\hyp
 \doxysubsubsection{\texorpdfstring{close}{close}}
 {\footnotesize\ttfamily void DB\+\_\+\+Server\+::close (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [slot]}}
 
-Method, that closing connection with database \mbox{\Hypertarget{class_d_b___server_ae503392addf041f1b1769c88cb33bdf3}\label{class_d_b___server_ae503392addf041f1b1769c88cb33bdf3}} 
-\index{DB\_Server@{DB\_Server}!get@{get}}
-\index{get@{get}!DB\_Server@{DB\_Server}}
-\doxysubsubsection{\texorpdfstring{get()}{get()}}
-{\footnotesize\ttfamily static \mbox{\hyperlink{class_d_b___server}{DB\+\_\+\+Server}} $\ast$ DB\+\_\+\+Server\+::get (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
-
-Method, that IDK what is he doing! \mbox{\Hypertarget{class_d_b___server_a1736a4db23f2e1d626f489d9b211b4f7}\label{class_d_b___server_a1736a4db23f2e1d626f489d9b211b4f7}} 
+closes connection with database \mbox{\Hypertarget{class_d_b___server_a1736a4db23f2e1d626f489d9b211b4f7}\label{class_d_b___server_a1736a4db23f2e1d626f489d9b211b4f7}} 
 \index{DB\_Server@{DB\_Server}!init@{init}}
 \index{init@{init}!DB\_Server@{DB\_Server}}
 \doxysubsubsection{\texorpdfstring{init()}{init()}}
 {\footnotesize\ttfamily bool DB\+\_\+\+Server\+::init (\begin{DoxyParamCaption}\item[{const QString}]{host = {\ttfamily \char`\"{}\char`\"{}},  }\item[{const int}]{port = {\ttfamily 0},  }\item[{const QString}]{database\+\_\+name = {\ttfamily \char`\"{}\char`\"{}},  }\item[{const QString}]{user = {\ttfamily \char`\"{}\char`\"{}},  }\item[{const QString}]{pass = {\ttfamily \char`\"{}\char`\"{}} }\end{DoxyParamCaption})}
 
-Object, that adding Postgre\+SQL database, setting DB parametrs and reptorting about the condition of BD loading \mbox{\Hypertarget{class_d_b___server_acc10401becbd9bc94b5e2790ec171590}\label{class_d_b___server_acc10401becbd9bc94b5e2790ec171590}} 
+adds Postgre\+SQL database, setts DB parametrs and reptorts about the condition of BD loading \mbox{\Hypertarget{class_d_b___server_acc10401becbd9bc94b5e2790ec171590}\label{class_d_b___server_acc10401becbd9bc94b5e2790ec171590}} 
 \index{DB\_Server@{DB\_Server}!query\_prepare@{query\_prepare}}
 \index{query\_prepare@{query\_prepare}!DB\_Server@{DB\_Server}}
 \doxysubsubsection{\texorpdfstring{query\_prepare()}{query\_prepare()}}
 {\footnotesize\ttfamily QSql\+Query DB\+\_\+\+Server\+::query\+\_\+prepare (\begin{DoxyParamCaption}\item[{const QString}]{q }\end{DoxyParamCaption})}
 
-Method, that making complex query to DB with \char`\"{}prepare\char`\"{} parameter \mbox{\Hypertarget{class_d_b___server_ad4f05e37f946966adb7e00a2af79b845}\label{class_d_b___server_ad4f05e37f946966adb7e00a2af79b845}} 
+makes complex query to DB with \char`\"{}prepare\char`\"{} parameter \mbox{\Hypertarget{class_d_b___server_ad4f05e37f946966adb7e00a2af79b845}\label{class_d_b___server_ad4f05e37f946966adb7e00a2af79b845}} 
 \index{DB\_Server@{DB\_Server}!query\_simple@{query\_simple}}
 \index{query\_simple@{query\_simple}!DB\_Server@{DB\_Server}}
 \doxysubsubsection{\texorpdfstring{query\_simple()}{query\_simple()}}
 {\footnotesize\ttfamily QSql\+Query DB\+\_\+\+Server\+::query\+\_\+simple (\begin{DoxyParamCaption}\item[{const QString}]{q }\end{DoxyParamCaption})}
 
-Method, that making simple query to DB 
+makes simple query to DB 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/db\+\_\+server.\+h\item 
-C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/db\+\_\+server.\+cpp\end{DoxyCompactItemize}
+C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{db__server_8h}{db\+\_\+server.\+h}}\item 
+C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{db__server_8cpp}{db\+\_\+server.\+cpp}}\end{DoxyCompactItemize}
