--- a/doc/server doc/latex/files.tex
+++ b/doc/server doc/latex/files.tex
@@ -1,6 +1,9 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{db__server_8h_source}{db\+\_\+server.\+h}} }{\pageref{db__server_8h_source}}{}
-\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{mytcpserver_8h_source}{mytcpserver.\+h}} }{\pageref{mytcpserver_8h_source}}{}
-\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{parser_8h_source}{parser.\+h}} }{\pageref{parser_8h_source}}{}
+\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{db__server_8cpp}{db\+\_\+server.\+cpp}} \\*Methods for the interaction of the server with the database }{\pageref{db__server_8cpp}}{}
+\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{db__server_8h}{db\+\_\+server.\+h}} \\*Header file for \mbox{\hyperlink{db__server_8cpp}{db\+\_\+server.\+cpp}} }{\pageref{db__server_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{mytcpserver_8cpp}{mytcpserver.\+cpp}} \\*File with methods for the interaction of the socket and server }{\pageref{mytcpserver_8cpp}}{}
+\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{mytcpserver_8h}{mytcpserver.\+h}} \\*Header file for \mbox{\hyperlink{mytcpserver_8cpp}{mytcpserver.\+cpp}} }{\pageref{mytcpserver_8h}}{}
+\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{parser_8cpp}{parser.\+cpp}} \\*Short description }{\pageref{parser_8cpp}}{}
+\item\contentsline{section}{C\+:/\+Users/yariy/\+Documents/\+Git\+Hub/\+ZLP-\/\+Library/src/server/\mbox{\hyperlink{parser_8h}{parser.\+h}} \\*Header file for \mbox{\hyperlink{parser_8cpp}{parser.\+cpp}} }{\pageref{parser_8h}}{}
 \end{DoxyCompactList}
