--- a/doc/server doc/latex/parser_8h_source.tex
+++ b/doc/server doc/latex/parser_8h_source.tex
@@ -1,14 +1,14 @@
 \hypertarget{parser_8h_source}{}\doxysection{parser.\+h}
 \label{parser_8h_source}\index{C:/Users/yariy/Documents/GitHub/ZLP-\/Library/src/server/parser.h@{C:/Users/yariy/Documents/GitHub/ZLP-\/Library/src/server/parser.h}}
-
+\mbox{\hyperlink{parser_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
-\DoxyCodeLine{00002\ \textcolor{preprocessor}{\#ifndef\ PARSER\_H}}
-\DoxyCodeLine{00003\ \textcolor{preprocessor}{\#define\ PARSER\_H}}
-\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <QByteArray>}}
-\DoxyCodeLine{00005\ }
-\DoxyCodeLine{00006\ QByteArray\ execute\_line(\textcolor{keyword}{const}\ QByteArray\&\ line);}
-\DoxyCodeLine{00007\ }
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ PARSER\_H}}
+\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#ifndef\ PARSER\_H}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#define\ PARSER\_H}}
+\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <QByteArray>}}
+\DoxyCodeLine{00008\ }
+\DoxyCodeLine{00009\ QByteArray\ \mbox{\hyperlink{parser_8h_ae8829765c32fd7d2f8efc4d2b689ebf5}{execute\_line}}(\textcolor{keyword}{const}\ QByteArray\&\ line);}
+\DoxyCodeLine{00010\ }
+\DoxyCodeLine{00011\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ PARSER\_H}}
 
 \end{DoxyCode}
