--- a/doc/server doc/latex/refman.tex
+++ b/doc/server doc/latex/refman.tex
@@ -186,8 +186,14 @@
 \input{class_d_b___server}
 \input{class_my_tcp_server}
 \chapter{File Documentation}
+\input{db__server_8cpp}
+\input{db__server_8h}
 \input{db__server_8h_source}
+\input{mytcpserver_8cpp}
+\input{mytcpserver_8h}
 \input{mytcpserver_8h_source}
+\input{parser_8cpp}
+\input{parser_8h}
 \input{parser_8h_source}
 %--- End generated contents ---
 % Index
