--- a/doc/server doc/latex/db__server_8h_source.tex
+++ b/doc/server doc/latex/db__server_8h_source.tex
@@ -1,41 +1,42 @@
 \hypertarget{db__server_8h_source}{}\doxysection{db\+\_\+server.\+h}
 \label{db__server_8h_source}\index{C:/Users/yariy/Documents/GitHub/ZLP-\/Library/src/server/db\_server.h@{C:/Users/yariy/Documents/GitHub/ZLP-\/Library/src/server/db\_server.h}}
-
+\mbox{\hyperlink{db__server_8h}{Go to the documentation of this file.}}
 \begin{DoxyCode}{0}
-\DoxyCodeLine{00001\ \textcolor{preprocessor}{\#ifndef\ DB\_SERVER\_H}}
-\DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ DB\_SERVER\_H}}
-\DoxyCodeLine{00003\ \textcolor{preprocessor}{\#include\ <QSqlQuery>}}
-\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <QSqlRecord>}}
-\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ <QVariant>}}
-\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <QObject>}}
-\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <QDebug>}}
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ <QSqlError>}}
-\DoxyCodeLine{00009\ }
-\DoxyCodeLine{00010\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_d_b___server}{DB\_Server}}\ :\ \textcolor{keyword}{public}\ QObject\ \{}
-\DoxyCodeLine{00011\ \ \ \ \ Q\_OBJECT}
-\DoxyCodeLine{00012\ \ \ \ \ \textcolor{keyword}{static}\ \mbox{\hyperlink{class_d_b___server}{DB\_Server}}\ *instance;}
-\DoxyCodeLine{00013\ \ \ \ \ QSqlDatabase\ db;}
-\DoxyCodeLine{00014\ \ \ \ \ QString\ db\_host\ =\ \textcolor{stringliteral}{"{}postgres"{}};}
-\DoxyCodeLine{00015\ \ \ \ \ QString\ db\_name\ =\ \textcolor{stringliteral}{"{}zlplib"{}};}
-\DoxyCodeLine{00016\ \ \ \ \ QString\ db\_user\ =\ \textcolor{stringliteral}{"{}zlplib"{}};}
-\DoxyCodeLine{00017\ \ \ \ \ QString\ db\_pass\ =\ \textcolor{stringliteral}{"{}zlplibpass"{}};}
-\DoxyCodeLine{00018\ \ \ \ \ \textcolor{keywordtype}{int}\ db\_port\ =\ 5432;}
-\DoxyCodeLine{00019\ }
-\DoxyCodeLine{00020\ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00021\ \ \ \ \ \textcolor{keyword}{static}\ \mbox{\hyperlink{class_d_b___server}{DB\_Server}}\ *\mbox{\hyperlink{class_d_b___server_ae503392addf041f1b1769c88cb33bdf3}{get}}();}
-\DoxyCodeLine{00022\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{class_d_b___server_a1736a4db23f2e1d626f489d9b211b4f7}{init}}(}
-\DoxyCodeLine{00023\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ host\ =\ \textcolor{stringliteral}{"{}"{}},}
-\DoxyCodeLine{00024\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ port\ =\ 0,}
-\DoxyCodeLine{00025\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ database\_name\ =\ \textcolor{stringliteral}{"{}"{}},}
-\DoxyCodeLine{00026\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ user\ =\ \textcolor{stringliteral}{"{}"{}},}
-\DoxyCodeLine{00027\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ pass\ =\ \textcolor{stringliteral}{"{}"{}});}
-\DoxyCodeLine{00028\ }
-\DoxyCodeLine{00029\ \ \ \ \ QSqlQuery\ \mbox{\hyperlink{class_d_b___server_ad4f05e37f946966adb7e00a2af79b845}{query\_simple}}(\textcolor{keyword}{const}\ QString\ q);}
-\DoxyCodeLine{00030\ \ \ \ \ QSqlQuery\ \mbox{\hyperlink{class_d_b___server_acc10401becbd9bc94b5e2790ec171590}{query\_prepare}}(\textcolor{keyword}{const}\ QString\ q);}
-\DoxyCodeLine{00031\ \textcolor{keyword}{public}\ slots:}
-\DoxyCodeLine{00032\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_d_b___server_a26a9265bb1bfbb83af2c4754b2134db4}{close}}();}
-\DoxyCodeLine{00033\ \};}
-\DoxyCodeLine{00034\ }
-\DoxyCodeLine{00035\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ DB\_SERVER\_H}}
+\DoxyCodeLine{00001\ }
+\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#ifndef\ DB\_SERVER\_H}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#define\ DB\_SERVER\_H}}
+\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <QSqlQuery>}}
+\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ <QSqlRecord>}}
+\DoxyCodeLine{00009\ \textcolor{preprocessor}{\#include\ <QVariant>}}
+\DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ <QObject>}}
+\DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ <QDebug>}}
+\DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ <QSqlError>}}
+\DoxyCodeLine{00013\ }
+\DoxyCodeLine{00014\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_d_b___server}{DB\_Server}}\ :\ \textcolor{keyword}{public}\ QObject\ \{}
+\DoxyCodeLine{00015\ \ \ \ \ Q\_OBJECT}
+\DoxyCodeLine{00016\ \ \ \ \ \textcolor{keyword}{static}\ \mbox{\hyperlink{class_d_b___server}{DB\_Server}}\ *instance;}
+\DoxyCodeLine{00017\ \ \ \ \ QSqlDatabase\ db;}
+\DoxyCodeLine{00018\ \ \ \ \ QString\ db\_host\ =\ \textcolor{stringliteral}{"{}postgres"{}};}
+\DoxyCodeLine{00019\ \ \ \ \ QString\ db\_name\ =\ \textcolor{stringliteral}{"{}zlplib"{}};}
+\DoxyCodeLine{00020\ \ \ \ \ QString\ db\_user\ =\ \textcolor{stringliteral}{"{}zlplib"{}};}
+\DoxyCodeLine{00021\ \ \ \ \ QString\ db\_pass\ =\ \textcolor{stringliteral}{"{}zlplibpass"{}};}
+\DoxyCodeLine{00022\ \ \ \ \ \textcolor{keywordtype}{int}\ db\_port\ =\ 5432;}
+\DoxyCodeLine{00023\ }
+\DoxyCodeLine{00024\ \textcolor{keyword}{public}:}
+\DoxyCodeLine{00025\ \ \ \ \ \textcolor{keyword}{static}\ \mbox{\hyperlink{class_d_b___server}{DB\_Server}}\ *get();}
+\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{class_d_b___server_a1736a4db23f2e1d626f489d9b211b4f7}{init}}(}
+\DoxyCodeLine{00027\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ host\ =\ \textcolor{stringliteral}{"{}"{}},}
+\DoxyCodeLine{00028\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \textcolor{keywordtype}{int}\ port\ =\ 0,}
+\DoxyCodeLine{00029\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ database\_name\ =\ \textcolor{stringliteral}{"{}"{}},}
+\DoxyCodeLine{00030\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ user\ =\ \textcolor{stringliteral}{"{}"{}},}
+\DoxyCodeLine{00031\ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ QString\ pass\ =\ \textcolor{stringliteral}{"{}"{}});}
+\DoxyCodeLine{00032\ }
+\DoxyCodeLine{00033\ \ \ \ \ QSqlQuery\ \mbox{\hyperlink{class_d_b___server_ad4f05e37f946966adb7e00a2af79b845}{query\_simple}}(\textcolor{keyword}{const}\ QString\ q);}
+\DoxyCodeLine{00034\ \ \ \ \ QSqlQuery\ \mbox{\hyperlink{class_d_b___server_acc10401becbd9bc94b5e2790ec171590}{query\_prepare}}(\textcolor{keyword}{const}\ QString\ q);}
+\DoxyCodeLine{00035\ \textcolor{keyword}{public}\ slots:}
+\DoxyCodeLine{00036\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_d_b___server_a26a9265bb1bfbb83af2c4754b2134db4}{close}}();}
+\DoxyCodeLine{00037\ \};}
+\DoxyCodeLine{00038\ }
+\DoxyCodeLine{00039\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{//\ DB\_SERVER\_H}}
 
 \end{DoxyCode}
